overflow-fixe

--- a/style.scss
+++ b/style.scss
@@ -539,6 +539,10 @@ footer {
             br {
                 display: none;
             }
+            img {
+                width: 180px;
+                height: 90px;
+            }
         }
     }
     .logo {
